  * JSON: add MIME types and file extensions for several line-delimited
    JSON formats (#2490)
  * Nix: many improvements (#2551),
  * Python: add ``starlark`` and ``bazel`` aliases (#2517)
  * Spice: add ``panic`` keyword and ``->`` operator (#2510)
  * Wikitext: fix erroneous highlighting of LanguageConverter markup
    (#2493), add missing variant languages (#2494)

- Fix ctags support and tests (#2487)
- The ``pygments.styles`` module contains a new ``STYLES`` variable
  with a dictionary of built-in styles.  The old ``STYLE_MAP`` variable,
  which uses a different format, is kept for backwards compatibility.
- On Windows, add a new installation extra (``windows-terminal``) which pulls in
  dependencies for colored console output. See :doc:`cmdline` for more details.
- Support more file types in ``autopygmentize`` script (#2513)
- Change color of numbers in ``rrt`` style (#2526)
- Fix error when trying to look up plugin formatters by file extension
  of the output format (#2563)

Version 2.16.1
--------------

- Fix ``native`` style missing from style list (#2484)

Version 2.16.0
--------------
(released August 6th, 2023)

- New lexers:

  * ASN.1 (#2462)
  * Blueprint (#2434)
  * BQN (#2472)
  * DNS zone files (#2464)
  * GraphQL (#2428)
  * Linux desktop files (following the specification of the
    Freedesktop group, formerly known as XDG) (#2470)
  * NVIDIA PTX (#2432)
  * OpenSCAD (#2449)
  * systemd (#2470)
  * TLS presentation language (#2455)
  * Verifpal (#2430)
  * YARA (#2453)

- Updated lexers:

  * ASC: Add ``application/pem-certificate-chain`` mimetype (#2471)
  * C/C++: Refine keyword lists (#2421, #2422)
  * Carbon: Fix long processing times on invalid input, fix number
    lexing (#2454, #2456)
  * Elpi: Handle quotations (#2419)
  * Go: Support additional built-ins (#2481)
  * HTTP: Support empty headers (#2461), support more general methods (#2460),
    also recognize responses in ``analyse_text`` implementation (#2460), and