@@ -20,6 +20,11 @@ MESSAGE( Welc"ome)" ) # rule 2
 MESSAGE( ""Thanks ) # rule 1
 MESSAGE( Thanks"" ) # rule 3
 
+message([==[
+this is a
+multiline argument
+]==])
+
 SET( x y A B C )              # stores "y;A;B;C" in x (without quote)
 SET( ${x} )                   # => SET( y;A;B;C ) => SET( y A B C)
 MESSAGE( ${y} )               # prints "ABC" to stdout (without quotes)
