@@ -29,6 +29,7 @@ Version 2.17.0
   * Spice: add ``panic`` keyword and ``->`` operator (#2510)
   * Wikitext: fix erroneous highlighting of LanguageConverter markup
     (#2493), add missing variant languages (#2494)
+  * CMake: support `[=[ bracketed arguments ]=]` (#2549)
 
 - Fix ctags support and tests (#2487)
 - The ``pygments.styles`` module contains a new ``STYLES`` variable
